# vectordatabase-sdk-cpp

./: Attribution.txt  CMakeLists.txt  README.md
example/: main.cpp
vectordatabase/include/: helper.h  rpc_client.h
vectordatabase/include/types/: collection.h  consts.h  database.h  document.h  filter.h  index.h
vectordatabase/proto/: olama.grpc.pb.cc  olama.grpc.pb.h  olama.pb.cc  olama.pb.h  olama.proto
vectordatabase/src/: filter.cpp  helper.cpp  rpc_client.cpp  rpc_collection.cpp  rpc_database.cpp  rpc_document.cpp  rpc_index.cpp
vectordatabase/tests/: CMakeLists.txt  filter_test.cpp  rpc_client_test_base.h  rpc_collection_test.cpp  rpc_database_test.cpp  rpc_document_test.cpp  rpc_index_test.cpp  test_main.cpp
